@@ -76,6 +76,7 @@ static info_lkp_t apcstatusflag_info[] = {
 	{ 0, NULL, NULL }
 };
 
+
 /* --------------------------------------------------------------- */
 /*      Vendor-specific usage table */
 /* --------------------------------------------------------------- */
@@ -83,6 +84,9 @@ static info_lkp_t apcstatusflag_info[] = {
 /* APC usage table */
 static usage_lkp_t apc_usage_lkp[] = {
 	{ "APCGeneralCollection",	0xff860005 },
+	{ "APCEnvironment",		0xff860006 },
+	{ "APCProbe1",			0xff860007 },
+	{ "APCProbe2",			0xff860008 },
 	{ "APCBattReplaceDate",		0xff860016 },
 	{ "APCBattCapBeforeStartup",	0xff860019 }, /* FIXME: exploit */
 	{ "APC_UPS_FirmwareRevision",	0xff860042 },
@@ -218,6 +222,14 @@ static hid_info_t apc_hid2nut[] = {
   /* Output page */
   { "output.voltage", 0, 0, "UPS.Output.Voltage", NULL, "%.1f", 0, NULL },
   { "output.voltage.nominal", 0, 0, "UPS.Output.ConfigVoltage", NULL, "%.1f", 0, NULL },
+
+  /* Environmental page */
+  { "ambient.temperature", 0, 0, "UPS.APCEnvironment.APCProbe1.Temperature", NULL, "%.1f", 0, kelvin_celsius_conversion },
+  { "ambient.humidity", 0, 0, "UPS.APCEnvironment.APCProbe1.Humidity", NULL, "%.1f", 0, NULL },
+/*
+  { "ambient.temperature", 0, 0, "UPS.APCEnvironment.APCProbe2.Temperature", NULL, "%.1f", 0, kelvin_celsius_conversion },
+  { "ambient.humidity", 0, 0, "UPS.APCEnvironment.APCProbe2.Humidity", NULL, "%.1f", 0, NULL },
+ */
 
   /* instant commands. */
   /* test.* split into subset while waiting for extradata support
