@@ -1,3 +1,7 @@
+Sat Sep 20 09:29:05 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/apc-hid.c: Add enviromental sensor
+
 Fri Sep 19 11:59:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - common/state.c,drivers/main.c,include/extstate.h: Make it possible to
